<resources>
    <string name="tos">By downloading, installing, or using the RemoteTracker software, accessing or using the RemoteTracker service (together, the "Products" or "Services"), or accessing or using any of the content available within the Products, you agree to be bound by the following:\n\n

(1) Safely use: NEVER USE THE INFORMATION OBTAINED FROM REMOTETRACKER AND TRY TO GET BACK YOUR DEVICE. SEND INFORMATION OBTAINED
    TO LOCAL POLICE, WHICH ARE TRAINED FOR THIS SERVICE. Remember that it is not worth risking your life because of a device that can be
    bought again. The developer or any partner has no responsibility of bad use of this software;\n
(2) the terms found on our License page;\n
(3) the additional terms and conditions set forth below:\n\n

Before you continue, you should read each of these two documents, as together they form a binding agreement between you and JVSoftware regarding
your use of the Products. Collectively, the License Terms and the Additional Terms are referred to as the "Terms".\n

As a condition of downloading, accessing, or using the Products, you also agree to the terms of the JVSoftware Privacy Policy.\n
1. Use of the Products. JVSoftware grants you a non-exclusive, non-transferable license to access the RemoteTracker service and to access the Content
  (as defined below) within the Products and according to the Terms.\n
2. Restrictions on Use. JVSoftware only authorize the use of RemoteTracker to track your own device if you lose it or if you was stolen.
   This information can only be used to retrieve your lost device. You cannot use this information to any other purpose. Any other use of this
   software is responsibility of the user and must be in accordance with the law.\n
3. Appropriate Conduct; Compliance with Law. You agree that you are responsible for your own conduct and content while using the Products, and for any
   consequences thereof. You agree to use the Products only for purposes that are legal, proper and in accordance with the Terms and any applicable
   policies or guidelines JVSoftware may make available.\n
4. DISCLAIMER OF WARRANTIES AND LIMITATIONS ON LIABILITY. JVSOFTWARE AND ITS LICENSORS MAKE NO REPRESENTATIONS OR WARRANTIES REGARDING THE ACCURACY OR COMPLETENESS OF ANY CONTENT OR THE PRODUCTS. \n
5. JVSOFTWARE AND ITS LICENSORS DISCLAIM ALL WARRANTIES IN CONNECTION WITH THE CONTENT AND THE PRODUCTS, AND WILL NOT BE LIABLE FOR ANY DAMAGE OR LOSS RESULTING FROM YOUR USE OF THE CONTENT OR THE PRODUCTS.\n
6. Support: RemoteTracker is a software without any warranty. You must be sure you want to use this software without guarantee of support from developers.
   Your questions can be sent to http://remotetracker.sourceforge.net/support.html but that does not mean you get an answer.\n
7.  Source code: RemoteTracker is not an open source project. You can not get the source code of the project, can not get the sources from reverse engineering or any other techniques.\n</string>
    <string name="tosTitle">RemoteTracker Terms of Service</string>
    <string name="hello">Hello World, RemoteTrackerActivity!</string>
    <string name="app_name">RemoteTracker</string>
    <string name="configMetrics">Measurement Standards</string>
    <string name="configUsesMetricStandards">Use metric standard</string>
    <string name="configUsesMetricStandardsExample">Meters, Km/h&#8230;</string>
    <string name="configOther">Other</string>
    <string name="configDebug">Debug mode</string>
    <string name="configDebugExample">In debug mode RemoteTracker will create a file named remotetracker.txt in memory card with useful informations for developer.</string>
    <string name="configAdmin">Device Administrator</string>
    <string name="configDeviceAdminTitle">Device Administrator?"</string>
    <string name="configDeviceAdminSummary">Check this if you want use the WIPEDATA command to remotelly restore to factory default, format memory card and not allow to uninstall RemoteTracker.</string>
    <string name="configSecurity">Security</string>
    <string name="configOwnerName">Owner name</string>
    <string name="configOwnerNameExample">Your name will be send to your emergency contacts.</string>
    <string name="configPassword">Password</string>
    <string name="configPasswordExample">Type your password</string>
    <string name="configQuestion">Secret question</string>
    <string name="configQuestionExample">Please type a secret question to retrieve your password if you forget it.</string>
    <string name="configAnswer">Secret answer</string>
    <string name="configAnswerExample">Please type an answer for your secret question.</string>
    <string name="configEnvioEMails">Sending E-Mails</string>
    <string name="configNome">Name </string>
    <string name="configInformeNomeCompleto">Type your full name</string>
    <string name="configEnderecoEMail">E-Mail Address</string>
    <string name="configInformeEnderecoEMail">Type your e-mail address</string>
    <string name="configExigeAutenticacao">Need authentication</string>
    <string name="configSMTPExigeAutenticacao">The SMTP server need authentication</string>
    <string name="configNomeLogin">Login name</string>
    <string name="configInformeNomeLogin">Type your login name</string>
    <string name="configSenha">Password</string>
    <string name="configInformeSenha">Type your password</string>
    <string name="configServidorSMTP">SMTP</string>
    <string name="configInformeServidorSMTP">Type you SMTP address</string>
    <string name="configPorta">Port</string>
    <string name="configInformePorta">Type the SMTP port</string>
    <string name="configGPS">GPS Configurations</string>
    <string name="configGPSTimeout">Timeout</string>
    <string name="configGPSTimeoutExplanation">Time, in seconds, to try get coordinates using GPS. When this time is over, the location will be get using Google Location Service.</string>
    <string name="configDefaultEMailAddress">Type your default E-Mail address</string>
    <string name="configDefaultEMailAddressExample">This address will be used when RT receive an e-mail command without specified return address.</string>
    <string name="configEnvioFTP">FTP Server Configurations</string>
    <string name="configFTPServer">Server address</string>
    <string name="configFTPServerExample">Please enter the FTP server address (ftp.foobar.com)</string>
    <string name="configRemotePath">Remote Path</string>
    <string name="configRemotePathExample">Please enter the Remote Path (/myFolder)</string>
    <string name="msgUnknowcommand">Command does not exists.</string>
    <string name="msgCommandNotAvailable">This command is not available in Android devices.</string>
    <string name="msgWrongPassword">Wrong password.</string>
    <string name="msgErrorWhileProcessingCommand">Error while processing command.</string>
    <string name="msgNoDataOrGPSAvailable">GPS and network unavailable. Can\'t get current position.</string>
    <string name="msgPositionFromGoogle">Position from network.</string>
    <string name="msgPositionFromGPS">Position from GPS.</string>
    <string name="msgLat">Lat:</string>
    <string name="msgLon">Lon:</string>
    <string name="msgLink">Link:</string>
    <string name="msgMessageWasDisplayed">The message was displayed</string>
    <string name="msgMessageWasNotDisplayed">The message can\'t be empty. Please use the extra parameter: rt#msg,your message##password.</string>
    <string name="msgComments">Feel free to send comments, criticisms and suggestions for future releases.</string>
    <string name="msgSending">Sending&#8230;</string>
    <string name="msgSubject">E-Mail from RemoteTracker</string>
    <string name="msgNoReturnEMail">No returning e-mail address was specified.</string>
    <string name="msgInvalidEMailConfigurations">The E-Mail configurations are invalid or incomplete. RT cannot send e-mail answers.</string>
    <string name="msgErrorSendingEMail">An error occurred trying send E-Mail. Please take a look in configurations.</string>
    <string name="msgInvalidPassword">Invalid Password</string>
    <string name="msgError">Error!</string>
    <string name="msgOwnerSIMCard">Owner SIM Card</string>
    <string name="msgNeedOneSIMCard">You must define at least one known SIM Card.</string>
    <string name="msgSIMCardChanged">RemoteTracker alert: the SIM Card of {0} was changed.</string>
    <string name="msgHistoryList">History List</string>
    <string name="msgHistoryListEmpty">This Command History is empty.</string>
    <string name="msgNoDefaultEMail">This phone does not have a default return e-mail address to receive messages.</string>
    <string name="msgNoFTPServer">This phone does not have a FTP server configured to receive files.</string>
    <string name="msgTypePassword">Please type your password</string>
    <string name="msgCard1">SIM Card 1:</string>
    <string name="msgCard2">SIM Card 2:</string>
    <string name="msgCard3">SIM Card 3:</string>
    <string name="msgCard4">SIM Card 4:</string>
    <string name="msgIMSI">IMSI:</string>
    <string name="msgAlias">Alias:</string>
    <string name="msgContactTitle">Emergency</string>
    <string name="msgContactExplanation">Enter here the numbers of phones and emails of your friends that will be triggered in cases of exchange of the SIM Card and other emergencies.</string>
    <string name="msgPhone1">Phone 1:</string>
    <string name="msgPhone2">Phone 2:</string>
    <string name="msgPhone3">Phone 3:</string>
    <string name="msgPhone4">Phone 4:</string>
    <string name="msgEmail1">E-Mail 1:</string>
    <string name="msgEmail2">E-Mail 2:</string>
    <string name="msgEmail3">E-Mail 3:</string>
    <string name="msgEmail4">E-Mail 4:</string>
    <string name="msgCommand">Command</string>
    <string name="msgFrom">From</string>
    <string name="msgTo">To</string>
    <string name="msgDate">Date</string>
    <string name="msgProVersion">PRO Version</string>
    <string name="msgOnlyProVersion">This command is only available in RemoteTrackerPro.</string>
    <string name="msgPictureSent">There is a new picture!</string>
    <string name="msgPictureCaptured">There is a captured picture while SEND button was pressed!</string>
    <string name="msgPicsCaptureOn">RemoteTracker was configured to start capture pictures.</string>
    <string name="msgPicsCaptureOff">RemoteTracker was configured to stop capture pictures.</string>
    <string name="msgTakePhotosOnCallOn">RemoteTracker was configured to take a photo on call.</string>
    <string name="msgTakePhotosOnCallOff">RemoteTracker was configured to stop taking photo on call.</string>
    <string name="msgTakePhotosNoFrontCamera">There is no front camera on this device.</string>
    <string name="msgNoSecretQuestion">This installation does not have a secret question.</string>
    <string name="msgNoSecretAnswer">This installation does not have an answer for the secret question.</string>
    <string name="msgWrongSecretAnswer">The answer does not match.</string>
    <string name="msgFileSent">The file {0} was sent to you.</string>
    <string name="msgConfigurationModule">Configuration Module</string>
    <string name="msgMainExplanation">This is a software for your personal security. It will help you find your device if you lose it. This program works intercepting SMS and responding to commands. Please see the HELP option to see how it works.</string>
    <string name="tvVersion">Version</string>
    <string name="tvAuthor">Author: </string>
    <string name="tvAuthorNome">Joubert Vasconcelos</string>
    <string name="help">Help</string>
    <string name="cards">Known Sim Cards</string>
    <string name="contacts">Contacts</string>
    <string name="history">Command History</string>
    <string name="config">Settings</string>
    <string name="about">About</string>
    <string name="preferenceScreen">PreferencesActivity</string>
</resources>