<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/generic_solid_flat_shape_blue"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvTitleNewBeer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivWizardAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sentinel"></ImageView>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="fill_parent"></LinearLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/tvVersao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvVersion"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/tvVersionNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvAuthor"
            android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAutorNome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAuthorNome"
                android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/tvFeelFree"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgComments"></TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>